--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,24 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+    }
     compileSdkVersion 22
-    buildToolsVersion "22.0.1"
-
+    buildToolsVersion '25.0.0'
     defaultConfig {
-        applicationId "com.example.hrafnkell.dots"
-        minSdkVersion 18
+        applicationId 'com.example.hrafnkell.points'
+        minSdkVersion 22
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 
